kubernetes-manifests/internet-of-things/miflora-mqtt-daemon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miflora-mqtt-daemon
  namespace: internet-of-things
  labels:
    app.kubernetes.io/name: miflora-mqtt-daemon
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: miflora-mqtt-daemon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: miflora-mqtt-daemon
    spec:
      hostNetwork: true
      containers:
        - name: miflora-mqtt-daemon
          image: "rascal/miflora-mqtt-daemon:20200127"
          resources:
            limits:
              cpu: 250m
              memory: 64Mi
            requests:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - mountPath: /config
              name: miflora-mqtt-daemon-config
              readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: arm
        hardware/usb: bluetooth
      volumes:
        - name: miflora-mqtt-daemon-config
          secret:
            secretName: miflora-mqtt-daemon-config
      dnsConfig:
        options:
        - name: ndots
          value: "1"
