kubernetes-manifests/internet-of-things/tasmoadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasmoadmin
  namespace: internet-of-things
  labels:
    app.kubernetes.io/name: tasmoadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tasmoadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tasmoadmin
    spec:
      containers:
        - name: tasmoadmin
          image: "raymondmm/tasmoadmin:v1.6.4-beta2"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: tasmoadmin-data
      volumes:
        - name: tasmoadmin-data
          persistentVolumeClaim:
            claimName: tasmoadmin-data-pvc
