kubernetes-manifests/internet-of-things/eclipse-mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: eclipse-mosquitto
  name: eclipse-mosquitto
  namespace: internet-of-things
spec:
  type: LoadBalancer
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
  selector:
    app.kubernetes.io/name: eclipse-mosquitto
