kubernetes-manifests/internet-of-things/homeassistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: home-assistant
  name: home-assistant
  namespace: internet-of-things
spec:
  ports:
  - name: api
    port: 8123
    targetPort: 8123
  selector:
    app.kubernetes.io/name: home-assistant
