kubernetes-manifests/internet-of-things/tasmoadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: tasmoadmin
  name: tasmoadmin
  namespace: internet-of-things
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: tasmoadmin
